# bonsai-gdext-integration-poc

godot/: googy_witto_geye.png.import  icon.svg.import  mob.tscn  project.godot  world.tscn
rust/: Cargo.toml
rust/src/: example_mob.rs  lib.rs
