[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
bonsai-bt = "0.6.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
